--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,19 +7,20 @@
 }
 
 body {
-    background-color: #1E1E1E; /* Cinza Escuro */
     font-family: 'Roboto', sans-serif;
+    background-image: url(../imagens/pexels-misael-garcia-832776-1707820\ \(1\).jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .container {
     width: 100%;
     max-width: 400px;
-    background-color: #303030; /* Cinza Médio */
+    background-color: #0808089d; /* Cinza Médio */
     height: 600px; /* Altura ajustada */
     margin: 20px auto; /* Centraliza horizontalmente com margem superior */
     text-align: center;
     border-radius: 10px;
-    border: 1px solid #444; /* Borda mais sutil */
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     padding: 20px;
     display: flex;
