ultima atualização da interface

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url(../imagens/img.jpg);
+    background-image: url(../imagens/imagembraba.jpg);
     background-size: cover;
     background-position: center;
 }
