--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     width: 100vw;
-    height: 95vh;
+    height: 100vh; /* Alterado para ocupar toda a altura da tela */
+    padding: 20px; /* Adicionado um padding ao redor do corpo */
 }
 
 .container {
