--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,10 +19,10 @@ body {
 
 .container {
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     background-color: #0808089d; /* Cinza Médio */
-    height: 600px; /* Altura ajustada */
-    margin: 20px auto; /* Centraliza horizontalmente com margem superior */
+    height: 550px; /* Altura ajustada */
+    margin: auto; /* Centraliza horizontalmente com margem superior */
     text-align: center;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
@@ -34,7 +34,7 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.9rem;
     color: #FFFFFF; /* Branco */
     text-shadow: 1px 1px 2px black;
     margin-bottom: 20px;
@@ -78,6 +78,6 @@ p {
     color: white;
     font-weight: bold;
     text-shadow: 1px 1px 5px black;
-    margin-top: 100px;
+    margin-top: 70px;
     
 }
