--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,6 +18,10 @@ body {
 }
 
 .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     max-width: 400px;
     background-color: #0808089d; /* Cinza Médio */
