--- a/estilos/style.css
+++ b/estilos/style.css
@@ -97,3 +97,9 @@ button:active {
     
      /* Centralizar texto */
 }
+
+.container {
+    width: 90%; /* Ou outra porcentagem adequada */
+    max-width: 600px; /* Defina um máximo para evitar que a div fique muito grande */
+    margin: auto; /* Para centralizar a div horizontalmente */
+}
