--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,4 +1,3 @@
-* Telas Maiores (Tablets e Desktops) */
 @media screen and (min-width: 768px) {
     .container {
         width: 50%;
@@ -12,25 +11,22 @@
         margin-top: 20px; /* Aumentando o espaçamento superior */
         position: relative;
         bottom: 70px;
-
     }
 
     #input {
         font-size: 16px; /* Ajustando o tamanho do texto de entrada */
         padding: 12px; /* Ajustando o preenchimento */
-        margin-top: 30px; /* Aumentando o espaçament
-        o superior */
+        margin-top: 30px; /* Aumentando o espaçamento superior */
         position: relative;
-         bottom: 10px;
+        bottom: 10px;
     }
 
     button {
         font-size: 16px; /* Ajustando o tamanho do botão */
         padding: 12px; /* Ajustando o preenchimento */
-         /* Aumentando o espaçamento superior */
-         font-weight: bold;
-         position: relative;
-         bottom: 10px;
+        font-weight: bold;
+        position: relative;
+        bottom: 10px;
     }
 
     #area {
@@ -43,15 +39,12 @@
         font-size: 1.3rem;
         position: relative;
         top: 30px;
-
-       
-    
-        
-         /* Centralizar texto */
     }
+}
 
-    @media screen and (min-width:1200px) {
-        .container {
+/* Telas Grandes (Desktops Grandes) */
+@media screen and (min-width: 1200px) {
+    .container {
         width: 50%;
         max-width: 800px; /* Limitando a largura máxima */
         height: 500px; /* Definindo uma altura fixa */
@@ -63,25 +56,22 @@
         margin-top: 20px; /* Aumentando o espaçamento superior */
         position: relative;
         bottom: 70px;
-
     }
 
     #input {
         font-size: 20px; /* Ajustando o tamanho do texto de entrada */
         padding: 12px; /* Ajustando o preenchimento */
-        margin-top: 30px; /* Aumentando o espaçament
-        o superior */
+        margin-top: 30px; /* Aumentando o espaçamento superior */
         position: relative;
-         bottom: 10px;
+        bottom: 10px;
     }
 
     button {
         font-size: 20px; /* Ajustando o tamanho do botão */
         padding: 12px; /* Ajustando o preenchimento */
-         /* Aumentando o espaçamento superior */
-         font-weight: bold;
-         position: relative;
-         bottom: 10px;
+        font-weight: bold;
+        position: relative;
+        bottom: 10px;
     }
 
     #area {
@@ -94,8 +84,50 @@
         font-size: 1.3rem;
         position: relative;
         top: 30px;
+    }
+}
 
-       
-    
-        
-         /* Centralizar texto */
+/* Telas de Televisão */
+@media screen and (min-width: 1920px) {
+    .container {
+        width: 50%;
+        max-width: 1200px; /* Limitando a largura máxima */
+        height: 600px; /* Definindo uma altura fixa */
+        padding: 30px; /* Aumentando o espaçamento interno */
+    }
+
+    h1 {
+        font-size: 3rem; /* Ajustando o tamanho do título */
+        margin-top: 30px; /* Aumentando o espaçamento superior */
+        position: relative;
+        bottom: 70px;
+    }
+
+    #input {
+        font-size: 24px; /* Ajustando o tamanho do texto de entrada */
+        padding: 12px; /* Ajustando o preenchimento */
+        margin-top: 40px; /* Aumentando o espaçamento superior */
+        position: relative;
+        bottom: 10px;
+    }
+
+    button {
+        font-size: 24px; /* Ajustando o tamanho do botão */
+        padding: 12px; /* Ajustando o preenchimento */
+        font-weight: bold;
+        position: relative;
+        bottom: 10px;
+    }
+
+    #area {
+        width: 100%; /* Garantir que o parágrafo ocupe toda a largura disponível */
+        height: 120px; /* Define uma altura fixa */
+        padding: 10px;
+        margin: 30px auto 0 auto; /* Centralizar horizontalmente e adicionar margem superior */
+        color: white;
+        font-weight: bold;
+        font-size: 1.6rem;
+        position: relative;
+        top: 40px;
+    }
+}
