--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-
-
 * {
     margin: 0;
     padding: 0;
@@ -23,10 +20,8 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
-     /* Para manter um formato de celular */
     background-color: rgba(8, 8, 8, 0.62);
-    height: 500px; /* Mantém a altura proporcional */
-    
+    height: 500px;
     margin: auto;
     text-align: center;
     border-radius: 20px;
@@ -38,12 +33,11 @@ body, html {
     border: 1px solid;
 }
 
-
 h1 {
     font-size: 1.5rem;
     color: #FFFFFF;
     text-shadow: 1px 1px 2px black;
-    margin: 50px 0 20px; /* Combine margin-top e margin-bottom */
+    margin: 50px 0 20px;
     position: relative;
     bottom: 50px;
 }
@@ -54,7 +48,7 @@ h1 {
     border-radius: 5px 5px 0 0;
     border: 1px solid black;
     font-size: 16px;
-    width: calc(100% - 24px); /* Ajuste o cálculo para compensar padding e bordas */
+    width: calc(100% - 24px);
     margin-bottom: -1px;
     text-align: center;
     outline: none;
@@ -64,7 +58,7 @@ h1 {
 
 button {
     padding: 12px;
-    width: calc(100% - 24px); /* Ajuste o cálculo para compensar padding e bordas */
+    width: calc(100% - 24px);
     background-color: rgba(0, 0, 0, 0.47);
     color: white;
     border: 1px solid black;
@@ -86,14 +80,11 @@ button:active {
 }
 
 #area {
-    width: 100%; /* Garantir que o parágrafo ocupe toda a largura disponível */
-    height: 100px; /* Define uma altura fixa */
+    width: 100%;
+    height: 100px;
     padding: 10px;
-    margin: 20px auto 0 auto; /* Centralizar horizontalmente e adicionar margem superior */
+    margin: 20px auto 0 auto;
     color: white;
     font-weight: bold;
     font-size: 1rem;
-   
-    
-     /* Centralizar texto */
 }
