--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,6 +31,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     border: 1px solid;
+    transition: 0.3s ease;
 }
 
 h1 {
