--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -1,3 +1,34 @@
+@media screen and (max-width: 468px) {
+    .container {
+       
+        max-width: 600px;
+        height: 500px;
+        padding: 30px;
+        transition: 0.3s ease;
+    }
+    #area {
+        width: 100%;
+        height: 100px;
+        padding: 10px;
+        margin: 0px auto 0 auto;
+        color: white;
+        font-weight: bold;
+        font-size: 1.1rem;
+        position: relative;
+        top: 0px;
+        bottom: 20px;
+        
+    }
+    h1{
+        font-size: 1.4rem;
+    
+    }
+   
+}
+
+
+
+
 @media screen and (min-width: 768px) {
     .container {
         width: 50%;
