--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,7 @@
 
 body, html {
     font-family: 'Roboto', sans-serif;
-    background-image: url(../imagens/imagembraba.jpg);
+    background-image: url(../imagens/estrada.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
